manifests/1passwordconnect.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: 1passwordconnect
