manifests/certificates.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: certificates
