manifests/crossplane-system.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: crossplane-system
