manifests/ingress-nginx-external.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ingress-nginx-external
