manifests/knative-serving.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: knative-serving
