manifests/kube-state-metrics.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: monitoring
