manifests/reloader.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: reloader
