manifests/monitoring.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: monitoring
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-extname
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.<path:stringreplacesecret#domain>
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: nginx.<path:stringreplacesecret#domain>
  sessionAffinity: None

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: grafana
#   namespace: grafana
#   annotations:
#     cert-manager.io/cluster-issuer: letsencrypt-production
#     kubernetes.io/ingress.class: nginx
#     kubernetes.io/tls-acme: 'true'
# spec:
#   ingressClassName: nginx
#   tls:
#   - hosts:
#     - grafana.<path:stringreplacesecret#domain>
#     secretName: grafana-cert
#   rules:
#   - host: grafana.<path:stringreplacesecret#domain>
#     http:
#       paths:
#       - backend:
#           service:
#             name: grafana
#             port:
#               number: 80
#         path: /
#         pathType: Prefix
