manifests/vault.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    name: vault
# ---
# apiVersion: external-secrets.io/v1beta1
# kind: ExternalSecret
# metadata:
#   name: sso
#   namespace: jenkins
# spec:
#   refreshInterval: "5m"
#   secretStoreRef:
#     kind: ClusterSecretStore
#     name: 1password
#   target:
#     creationPolicy: Owner
#   data:
#     - secretKey: jenkins-admin-secret
#       remoteRef:
#         key: jenkins
#         property: admin-secret
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: acme-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vault.hacksm.net
    secretName: vault-cert
  rules:
  - host: vault.hacksm.net
    http:
      paths:
      - backend:
          service:
            name: vault
            port:
              number: 8200
        path: /
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: vault-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: vault.hacksm.net
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: vault
spec:
  type: ExternalName
  externalName: nginx.hacksm.net
  sessionAffinity: None
